Add(I/ConfigParser/Tests, CustomUiElement, UiElementInfo)

--- a/PgrTools/PgrTools.csproj
+++ b/PgrTools/PgrTools.csproj
@@ -12,4 +12,8 @@
         <PublicSign>true</PublicSign>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="System.Text.Json" Version="5.0.2" />
+    </ItemGroup>
+
 </Project>
