--- a/PgrTools/PgrTools.csproj
+++ b/PgrTools/PgrTools.csproj
@@ -5,7 +5,6 @@
         <Version>0.3.0</Version>
         <LangVersion>9</LangVersion>
         <Nullable>enable</Nullable>
-        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Authors>Angel Pineda</Authors>
         <SignAssembly>true</SignAssembly>
         <AssemblyOriginatorKeyFile>Key.snk</AssemblyOriginatorKeyFile>
@@ -14,6 +13,12 @@
 
     <ItemGroup>
       <PackageReference Include="System.Text.Json" Version="5.0.2" />
+    </ItemGroup>
+    
+    <ItemGroup>
+        <ProjectReference Include="$(SolutionDir)/StaticInjector/StaticInjector/StaticInjector.csproj"
+                          OutputItemType="Analyzer"
+                          ReferenceOutputAssembly="false"/>
     </ItemGroup>
 
 </Project>
