--- a/PgrTools/PgrTools.csproj
+++ b/PgrTools/PgrTools.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
-        <Version>0.3.0</Version>
+        <Version>0.4.0</Version>
         <LangVersion>9</LangVersion>
         <Nullable>enable</Nullable>
         <Authors>Angel Pineda</Authors>
@@ -16,9 +16,7 @@
     </ItemGroup>
     
     <ItemGroup>
-        <ProjectReference Include="$(SolutionDir)/StaticInjector/StaticInjector/StaticInjector.csproj"
-                          OutputItemType="Analyzer"
-                          ReferenceOutputAssembly="false"/>
+        <ProjectReference Include="$(SolutionDir)/StaticInjector/StaticInjector/StaticInjector.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     </ItemGroup>
 
 </Project>
